# moe-chat

./: .gitignore  README.md  docker-compose.yml  moe_server.py  moe_server2.py  moe_visualizer_service.py  show_moe.py
backend/: .env.example  .flake8  README.md  alembic.ini  celery_worker.py  mypy_report.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: df4cb1396026_add_service_url_to_models_table.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  chats.py  files.py  health.py  models.py  users.py
backend/app/core/: __init__.py  celery_app.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  chat.py  file.py  message.py  model.py  user.py
backend/app/db/repositories/: __init__.py  base.py  chat.py  file.py  message.py  model.py  user.py
backend/app/db/schemas/: __init__.py
backend/app/db/schemas/api/: __init__.py
backend/app/db/schemas/api/request/: __init__.py  auth.py  chat.py  user.py
backend/app/db/schemas/api/response/: __init__.py  auth.py  base.py  chat.py  file.py  model.py  user.py
backend/app/db/schemas/dto/: __init__.py
backend/app/db/schemas/dto/input/: __init__.py  chat_dto.py  model_dto.py  user_dto.py
backend/app/db/schemas/dto/output/: __init__.py  chat_dto.py  model_dto.py  user_dto.py
backend/app/middleware/: __init__.py  auth.py  cors.py  errors.py  logging.py  rate_limit.py
backend/app/services/: __init__.py  auth_service.py  cache_service.py  chat_service.py  file_service.py  model_service.py  user_service.py  verification_service.py
backend/app/tasks/: __init__.py  file_tasks.py
backend/app/templates/: verification_email.html
backend/app/utils/: email_sender.py  exceptions.py  logger.py  redis_client.py  security.py  token_counter.py
docs/: api.md  database_design.md  frontend.md  (+6 more)
(+8 files in other folders)
